--- a/proportal/views/pages/legacy.tt
+++ b/proportal/views/pages/legacy.tt
@@ -333,6 +333,6 @@ as a reference for the papers in which they were reported.
 <div class="section-space"></div>
 
 
-<!-- </div> -->
+</div>
 
 [% END; %]
