--- a/proportal/views/inc/generic/table.tt
+++ b/proportal/views/inc/generic/table.tt
@@ -9,7 +9,7 @@
 # .transform      => hashref of functions to transform an object value for display
 #                 (e.g. to create a link with a certain value, modify text, etc.)
 
-PROCESS 'inc/generic/cbox.tt';
+#PROCESS 'inc/generic/cbox.tt';
 PROCESS 'inc/generic/link.tt';
 
 
@@ -50,8 +50,8 @@ IF data_table.tbody.size > 0;
 	<th class='[% data_table.class %]__th--[% th %]'>[%
 			IF headers.enum_map.$th;
 				headers.enum_map.$th;
-			ELSIF 'cbox' != th;
-				th | ucfirst;
+#			ELSIF 'cbox' != th;
+#				th | ucfirst;
 			END; %]</th>
 [%		END; %]
 	</tr>
