--- a/proportal/views/scripts/datatables.tt
+++ b/proportal/views/scripts/datatables.tt
@@ -1,17 +1,65 @@
-[%	IF ! scr_arr;
-		scr_arr = [];
-	END;
+[%	
 
-	scr_arr.unshift( 'https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js' );
-	scr_arr.unshift( '//code.jquery.com/jquery-1.12.4.js' );
+    MACRO d_table_init( scr_name ) BLOCK; %]
+    
+		$('#[% scr_name %]').DataTable( {
 
-	FOREACH s IN scr_arr;
-		'<script type="text/javascript" src="' _ s _ '"></script>';
-	END;
+        columnDefs: [ {
+            orderable: false,
+            className: 'select-checkbox',
+            targets:   0
+        } ],
+        select: {
+            style:    'multi'
+        },
+         "dom": '<"dt_top"ilBf>rt<"dt_bottom"p>',
+        buttons: [
+            'selectAll',
+            'selectNone',
+            {
+            	text: 'Add to Cart',
+            	action: function() {}
+            }
+        ],
+        paging: true
+
+		
+		} );
+
+	[%  END;
+
 %]
+
+<!-- 
+#	IF ! scr_arr;
+#		scr_arr = [];
+#	END;
+#
+#	scr_arr.unshift( 'https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js' );
+#	scr_arr.unshift( '//code.jquery.com/jquery-1.12.4.js' );
+#	scr_arr.unshift( 'https://cdn.datatables.net/select/1.2.2/js/dataTables.select.min.js' );
+#	scr_arr.unshift( 'https://cdn.datatables.net/buttons/1.3.1/js/dataTables.buttons.min.js' );
+#	
+#	FOREACH s IN scr_arr;
+#		'<script type="text/javascript" src="' _ s _ '"></script>';
+#	END;
+ -->
+
+
+<!-- these links contain jQuery, datatables base package, and buttons and select extensions -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jqc-1.12.4/dt-1.10.15/b-1.3.1/se-1.2.2/datatables.min.css"/>
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/jqc-1.12.4/dt-1.10.15/b-1.3.1/se-1.2.2/datatables.min.js"></script>
+
+
+
 <script type="text/javascript">
 $(document).ready(function() {
-    $('#cycog_gene_list').DataTable();
+[%   
+	FOR scr_name IN table_arr; 
+    	d_table_init( scr_name );
+   	END; 
+%] 
 } );
+
 </script>
 
